# simar_msgs

./: CMakeLists.txt  README.md  package.xml
msg/: Alarm.msg  ExtremeTemps.msg  PayloadAction.msg  PixelTemp.msg
srv/: CameraEthStreamService.srv  ExtremeTempsService.srv  GetFlightPlan.srv  GimbalMode.srv  GimbalPos.srv  GoToWaypoint.srv  SetFlightPlan.srv  Takeoff.srv
